@@ -1,5 +1,13 @@
 2007-02-23  Michael Smith  <msmith@fluendo.com>
 
+	* flumotion/component/producers/wms.py:
+	  Validate pushIds.
+	  Expire opaque/nonce pairs.
+	  Send 'stale' when appropriate.
+	  Identify our server as flumotion (as well as Cougar)
+
+2007-02-23  Michael Smith  <msmith@fluendo.com>
+
 	* flumotion/component/producers/asfparse.py:
 	  Parse more of headers to find out whether the stream will contain
 	  keyframes.
